<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:text="@string/guess_warning" />

    <EditText
        android:id="@+id/guess_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:gravity="top"
        android:lines="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/guess"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:text="@string/guess" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/guess"
            android:text="@string/cancel" />
    </RelativeLayout>

</LinearLayout>