<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bollywood" >

    <TextView
        android:id="@+id/highscoretitle"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_gravity="center"
        android:background="@drawable/transp_bg"
        android:gravity="center"
        android:text="HIGHSCORE"
        android:textColor="#82E30B"
        android:textColorHighlight="#E9EB2B"
        android:textSize="30sp"
        android:textStyle="italic"
        android:typeface="serif" />
    <!-- just draw a red line -->

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_below="@id/highscoretitle"
        android:background="#FF0000" />

    <ScrollView
        android:id="@+id/alphascroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/line"
        android:background="@drawable/transp_bg" >

        <TableLayout
            android:id="@+id/highscore_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dip"
                android:background="@android:color/transparent"
                android:gravity="center" >

                <TextView
                    android:layout_column="0"
                    android:layout_margin="1dip"
                    android:background="#000000"
                    android:gravity="center"
                    android:text="@string/palyername"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView
                    android:layout_column="1"
                    android:layout_margin="1dip"
                    android:background="#000000"
                    android:gravity="center"
                    android:text="@string/movesbonus"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView
                    android:layout_column="2"
                    android:layout_margin="1dip"
                    android:background="#000000"
                    android:gravity="center"
                    android:text="@string/timebonus"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView
                    android:layout_column="3"
                    android:layout_margin="1dip"
                    android:background="#000000"
                    android:gravity="center"
                    android:text="@string/guessbonus"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView
                    android:layout_column="4"
                    android:layout_margin="1dip"
                    android:background="#000000"
                    android:gravity="center"
                    android:text="@string/total"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:typeface="sans" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>